--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -28,8 +28,9 @@
 }
 
 .header-title {
-  font-size: 20px;
-  font-weight: 600;
+  font-family: "Montserrat Alternates";
+  font-size: 30px;
+  font-weight: 900;
   color: #1e293b;
   margin: 0;
   line-height: 1.4;
